# phantos-coldwallet

./: .gitignore  AUDIT_READINESS.md  BUILD_ISO.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  KNOWN_LIMITATIONS.md  LICENSE  PSBT_COMPATIBILITY.md  README.md  README_EN.md  RELEASE.md  ROADMAP.md  SECURITY.md  USB_INSTALL.md  VERIFY_RELEASE.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
app/: __init__.py  main.py
docs/: VALIDATION_REPORT.md  arquitetura.md  assinar-psbt.md  bluewallet.md  build-iso.md  criar-carteira.md  descriptors.md  electrum.md  exportar-carteira-observadora.md  faq.md  guia-iso-pendrive-completo.md  guia-usuario-leigo.md  instalacao-pendrive.md  recuperar-enderecos.md  restaurar-seed-passphrase.md  seguranca.md  sparrow.md  testes.md  threat-model.md  tutorial-ios.md  tutorial-linux.md  tutorial-windows.md  ur-encoding.md  visao-geral.md
patches/: README.md  embit-0.8.0-phantos-security.patch
scripts/: apply_embit_patch.sh  build_iso.sh  capture_screenshots.py  check_public_clean.sh  clean_sensitive.sh  create_release_artifacts.sh  harden_network.sh  make_banner.py  regtest_psbt_roundtrip.sh  release_artifacts.sh  reproducible_build_check.sh  run_dev.sh  run_validation.sh  take_screenshots.py  test_iso_qemu.sh  validate_iso_artifact.sh  validate_wallet_flow.py  verify_live_hardening.sh  verify_offline.sh  write_usb.sh
tests/: conftest.py  test_bip39.py  test_bip39_input.py  test_derivation.py  test_descriptors.py  test_memory.py  test_product_readiness_scripts.py  test_psbt.py  test_psbt_production.py  test_psbt_security.py  (+6 more)
(+33 files in other folders)
